nebula-cache-manager/core/objects/CacheValue__mdt/CacheValue__mdt.object-meta.xml
<CustomObject>
    <description>Used by Nebula Cache Manager to inject declarative cache values into the specified cache</description>
    <label>Cache Value</label>
    <pluralLabel>Cache Values</pluralLabel>
</CustomObject>