nebula-cache-manager/core/objects/CacheValue__mdt/fields/Cache__c.field-meta.xml
<CustomField>
    <fullName>Cache__c</fullName>
    <label>Cache</label>
    <referenceTo>CacheConfiguration__mdt</referenceTo>
    <relationshipLabel>Cache Values</relationshipLabel>
    <relationshipName>CacheValues</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>