nebula-cache-manager/core/objects/CacheValue__mdt/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <inlineHelpText
  >The Apex type of the provided value. This can be an valid Apex type that supports JSON deserialization, such as a primitive data type like String, Boolean, Datetime, or a custom Apex class</inlineHelpText>
    <label>Data Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>