nebula-cache-manager/core/objects/CacheValue__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <inlineHelpText>Key must be alphanumeric. Only a-z, A-Z and 0-9 characters are allowed.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>