nebula-cache-manager/core/objects/CacheValue__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Documentation https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_platform_cache_limits.htm</description>
    <inlineHelpText>Maximum size of a single cached item is 100 KB which is 102400 characters.</inlineHelpText>
    <label>Value</label>
    <length>102400</length>
    <type>LongTextArea</type>
</CustomField>