nebula-cache-manager/core/objects/CacheValue__mdt/validationRules/KeyMustBeAlphanumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>KeyMustBeAlphanumeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Key__c, &apos;^[a-zA-Z0-9]*$&apos;))</errorConditionFormula>
    <errorDisplayField>Key__c</errorDisplayField>
    <errorMessage>Key must be alphanumeric</errorMessage>
</ValidationRule>