nebula-cache-manager/core/objects/CacheValue__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsEnabled__c</columns>
    <columns>Cache__c</columns>
    <columns>Key__c</columns>
    <columns>DataType__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>